<resources>
    <string name="app_name">FoodMan</string>
    <string name="titulo_login">Login</string>
    <string name="register_titulo">Register</string>
    <string name="app_scan_item">Scan</string>
    <string name="errorLogin">Invalid Email or Password.</string>
    <string name="noBarcodeToast">Sorry, but we don\'t recognize this barcode on our database.</string>
    <string name="noInternet">You are not connected to the internet.</string>
    <string name="app_AddItem_item">Add Item</string>
    <string name="app_webPage_item">Webrowser</string>
    <string name="title_activity_recipes_details">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="internalError">Internal error</string>
    <string name="category">Category</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="ingredientes">• Ingredientes:</string>
    <string name="receita">• Receita</string>
    <string name="sbIngredientsMissing">Não tem ingredientes na sua despensa para fazer a receita.</string>
    <string name="sbAllIngredientsPresent">Tem ingredientes para fazer esta receita! Toca a cozinhar!</string>
    <string name="dura_o_40_min">Duração: 40 min</string>
    <string name="prepara_o_60_min">Preparação: 60 min</string>
    <string name="uma_receita">Uma receasdçlºk </string>
    <string name="add_product">Add Product</string>
    <string name="feedback">Feedback</string>
    <string name="pataria_de_cima">pataria de cima</string>
    <string name="umnickname">UmNicknaMe</string>
    <string name="recipes">Recipes</string>
    <string name="inventory">Inventory</string>
    <string name="_215">215</string>
    <string name="_20">20</string>
    <string name="email1">• Email:</string>
    <string name="umemail_exemple_com">umemail@exemple.com</string>
    <string name="created_at">• Created at:</string>
    <string name="_2550_23_89">2550-23-89</string>
    <string name="state">• State:</string>
    <string name="ativo">ativo</string>
    <string name="titulo_feedBack">Feedback</string>
    <string name="nome">Nome</string>
    <string name="assunto">Assunto</string>
    <string name="tipo">Tipo</string>
    <string name="texto">Texto</string>
</resources>