<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/food_bg_blur"
    tools:context=".views.FeedbackActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/login_form_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/rounded_3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.44">

                <TextView
                    android:id="@+id/login_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/rounded_4"
                    android:padding="15dp"
                    android:text="@string/titulo_feedBack"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="@id/login_form_layout"
                    app:layout_constraintStart_toStartOf="@id/login_form_layout"
                    app:layout_constraintTop_toTopOf="@id/login_form_layout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editTextNome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:foregroundTint="@color/white"
                    android:hint="@string/nome"
                    android:textColorHint="@color/white"
                    app:hintTextColor="@color/nivel6"
                    app:layout_constraintTop_toBottomOf="@id/login_title"
                    app:startIconTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtNone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/transparent"
                        android:inputType="textWebEmailAddress|text"
                        android:textColor="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editTextTipo"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tipo"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:textColorHint="@color/white"
                    app:endIconMode="dropdown_menu"
                    app:endIconTint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/editTextNome">

                    <AutoCompleteTextView
                        android:id="@+id/dropdown_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/transparent"
                        android:clickable="true"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:inputType="none"
                        android:textColor="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editTextAssunto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:hint="@string/assunto"
                    android:textColorHint="@color/white"
                    app:endIconTint="@color/white"
                    app:hintTextColor="@color/nivel6"
                    app:layout_constraintTop_toBottomOf="@id/editTextTipo"
                    app:startIconTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtAssunto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/transparent"
                        android:inputType="text"
                        android:textColor="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:hint="@string/email"
                    android:textColorHint="@color/white"
                    app:endIconTint="@color/white"
                    app:hintTextColor="@color/nivel6"
                    app:layout_constraintTop_toBottomOf="@id/editTextAssunto"
                    app:startIconTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/transparent"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editTextTexto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:hint="@string/texto"
                    android:textColorHint="@color/white"
                    app:endIconTint="@color/white"
                    app:hintTextColor="@color/nivel6"
                    app:layout_constraintTop_toBottomOf="@id/editTextEmail"
                    app:startIconTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtTexto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/transparent"
                        android:inputType="textMultiLine"
                        android:textColor="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:tint="@color/white"
                    app:layout_constraintBottom_toBottomOf="@id/login_form_layout"
                    app:layout_constraintEnd_toEndOf="@id/login_form_layout"
                    app:layout_constraintStart_toStartOf="@id/login_form_layout"
                    app:layout_constraintTop_toBottomOf="@id/editTextTexto"
                    app:srcCompat="@drawable/ic_baseline_send_24"
                    tools:ignore="VectorDrawableCompat" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>