<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LoginActivity"
    android:background="@drawable/food_bg_blur"
    android:padding="15dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="230sp"
        android:layout_marginBottom="17dp"
        app:layout_constraintBottom_toTopOf="@+id/login_form_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="288dp"
        android:background="@drawable/rounded_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_logo">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/rounded_4"
            android:padding="15dp"
            android:text="@string/titulo_login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@id/login_form_layout"
            app:layout_constraintStart_toStartOf="@id/login_form_layout"
            app:layout_constraintTop_toTopOf="@id/login_form_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/email"
            android:foregroundTint="@color/white"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/nivel6"
            app:layout_constraintTop_toBottomOf="@id/login_title"
            app:startIconDrawable="@drawable/ic_baseline_mail_24"
            app:startIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:inputType="textWebEmailAddress|text"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/white"
            app:hintTextColor="@color/nivel6"
            app:layout_constraintTop_toBottomOf="@id/editTextEmail"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:startIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:inputType="textPassword"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="15dp"
            android:clickable="true"
            android:focusable="true"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/login_form_layout"
            app:layout_constraintEnd_toEndOf="@id/login_form_layout"
            app:layout_constraintStart_toStartOf="@id/login_form_layout"
            app:layout_constraintTop_toBottomOf="@id/editTextPassword"
            app:srcCompat="@drawable/ic_baseline_login_24"
            tools:ignore="VectorDrawableCompat" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116sp"
        android:layout_marginBottom="15sp"
        android:clickable="true"
        android:focusable="true"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.983"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.998"
        app:srcCompat="@drawable/ic_baseline_add_24"
        tools:ignore="VectorDrawableCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>